# database-stuff

cassandra-cli/: Makefile  README.md  pyproject.toml
cassandra-cli/cassandra_cli/: cli.py  executor.py
cassandra-cli/tests/: test_cli.py  test_executor.py
sqlite/: memory.db  pyproject.toml  sqlite.py
