[tool.ruff]

[tool.poetry]
name = "cassandra-cli"
version = "0.1.3"
description = "This is a command-line interface for interacting with Cassandra using `nodetool` via `kubectl exec`."
authors = ["niteshkumarm287"]
readme = "README.md"
packages = [{ include = "cassandra_cli" }]

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "pypi-dev-local"
url = "https://jfrog.io/artifactory/" # update
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
libs = "^0.4.2" # update
coverage = "^7.13.4"

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.4"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.15.0"

[tool.poetry.scripts]
cassandra-cli = "cassandra_cli.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
